--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,20 @@
     margin: 0;
     padding: 0;
     list-style: none;
+    box-sizing: border-box;
 }
-header {
-    height: 82px;
-    background-color: rgb(0,0,0,0.75);
+html {
+    scroll-behavior: smooth;
+    height: 100%;
+    overflow-x: hidden;
+}
+body {
+    background-image: url('./assets/img/2474216.jpg');
+    background-size: cover;
+    
 }
 nav {
-    background-color: rgb(0,0,0,0.5);
+    /* background-color: rgb(0,0,0,0.5); */
     display: flex;
     padding: 25px;
     margin: 0;
@@ -71,3 +78,155 @@ nav .list-items li{
 .list-items a:focus{
     color:red;
 }
+.banner {
+    margin-top: 0;
+    margin-left: 20px;
+    padding: 260px 0 100px 0;
+    background-image: url('./assets/img/banner-bg.png');
+    background-position: top center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background: none;
+}
+.banner .tagline {
+    font-weight: 700;
+    letter-spacing: 0.8px;
+    padding: 8px 10px;
+    background: linear-gradient(90.21deg, rgba(170, 54, 124, 0.5) -5.91%, rgba(74, 47, 189, 0.5) 111.58%);
+    /* border: 1px solid rgba(255, 255, 255, 0.5); */
+    font-size: 20px;
+    margin-bottom: 16px;
+    display: inline-block;
+    color: white;
+}
+.banner h1 {
+    font-size: 65px;
+    font-weight: 700;
+    letter-spacing: 0.8px;
+    line-height: 1;
+    margin-bottom: 20px;
+    display: block;
+    color: white;
+}
+.banner p {
+    color: #ece6e6;
+    font-size: 18px;
+    letter-spacing: 0.8px;
+    line-height: 1.5em;
+    width: 96%;
+}
+.skill {
+    padding: 0 0 50px 0;
+    position: relative;
+  }
+  .skill-bx {
+    background: #151515;
+    border-radius: 64px;
+    text-align: center;
+    padding: 60px 50px;
+    margin-top: -60px;
+    color: white;
+  }
+  .skill h2 {
+      font-size: 45px;
+      font-weight: 700;
+      color: white;
+  }
+  .skill p {
+      color: #ece6e6;
+      font-size: 18px;
+      letter-spacing: 0.8px;
+      line-height: 1.5em;
+      margin: 14px 0 75px 0;
+  }
+  .skill-bx .item1 img{
+    width: 80%;
+  }
+  .skill-bx .item2 img{
+    width: 20%;
+  }
+  .skill-bx .item3 img{
+    width: 60%;
+  }
+  .skill-bx .items {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30vh;
+  }
+  .project {
+    padding: 80px 0;
+    position: relative;
+    background-color: black;
+  }
+  .project h2 {
+      font-size: 45px;
+      font-weight: 700;
+      text-align: center;
+      color: white;
+  }
+  .project p {
+    color:#ece6e6;
+    font-size: 18px;
+    letter-spacing: 0.8px;
+    line-height: 1.5em;
+    margin: 14px auto 30px auto;
+    text-align: center;
+    width: 56%;
+  }
+  .card-img-container {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .card-title-overlay {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px;
+    opacity: 0;
+    transition: opacity 0.3s;
+  }
+  
+  .card-img-container:hover .card-title-overlay {
+    opacity: 1;
+  }
+  /* In Contact.css */
+.contact {
+    background-color: #151515;
+    padding: 20px;
+    color: white;
+    margin-top: 40px;
+  }
+  
+  .form-group {
+    margin-bottom: 20px;
+  }
+  
+  .form-control {
+    width: 40%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+  
+  button {
+    background: none;
+    color: white;
+    font-size: 20px;
+    border: 2px solid white;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+  
+  button:hover {
+    background-color: rgb(255,255,255,0.9);
+    color: black;
+  }
+  form .form-control{
+    margin-left: auto;
+    margin-right: auto;
+  }
